--- a/demo1.ipynb
+++ b/demo1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "demo1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNai/wAg97/YSUMjUSZCDM2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOSKjm+0347j0rbp+M/HQTA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +23,26 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/xhu19/edge-computer-vision/blob/master/demo1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TZ3DTm4MdTSy",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Format Example\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AUcMnMPlitxt",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](![image](https://user-images.githubusercontent.com/53207444/83967468-3604eb00-a8f4-11ea-97cb-4ba667076c55.png))"
       ]
     },
     {
@@ -66,6 +87,26 @@
           },
           "execution_count": 3
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kDqhl7nodr6c",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Another Demo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pd7qpzU0d2wx",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Nested Code"
       ]
     }
   ]
